--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,9 +4,9 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=70
+#CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_WS2812_STRIP=y
+#CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=180
+#CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=70
